--- a/resource/css/main.css
+++ b/resource/css/main.css
@@ -23,15 +23,18 @@ a[href] {
     box-shadow: 0 4px 15px -5px #942ccc;
 }
 
-.center-content {
-    padding: 50px;
+.center-container {
+    display: flex;
+    justify-items: center;
+    height: 100vh;
+    align-items: center;
+    margin: 0 auto;
     text-align: center;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+}
+
+.center-content {
+    margin: 0 auto;
+    text-align: center;
 }
 
 .button-text {
