--- a/assets/css/404.css
+++ b/assets/css/404.css
@@ -14,3 +14,23 @@
     color: #000;
     font-size: 24px;
 }
+
+.full-screen {
+    width: 100vw;
+    height: 100vh;
+}
+
+.center-container {
+    display: flex;
+    justify-items: center;
+    height: 100vh;
+    align-items: center;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.center-content {
+    padding: 30px;
+    margin: 0 auto;
+    text-align: center;
+}
